--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,39 @@ back_end/.env
 front_end/firebaseConfig.js
 front_end/firebaseConfigAuth.js
 front_end/src/config.js
+
+back_end/node_modules
+
+
+back_end/logs
+back_end/*.log
+back_end/npm-debug.log*
+back_end/yarn-debug.log*
+back_end/yarn-error.log*
+back_end/pnpm-debug.log*
+back_end/lerna-debug.log*
+
+# Logs
+front_end/logs
+front_end/*.log
+front_end/npm-debug.log*
+front_end/yarn-debug.log*
+front_end/yarn-error.log*
+front_end/pnpm-debug.log*
+front_end/lerna-debug.log*
+
+front_end/node_modules
+front_end/dist
+front_end/dist-ssr
+front_end/*.local
+
+# Editor directories and files
+.vscode/*
+front_end/!.vscode/extensions.json
+front_end/.idea
+front_end/.DS_Store
+front_end/*.suo
+front_end/*.ntvs*
+front_end/*.njsproj
+front_end/*.sln
+front_end/*.sw?
