--- a/back_end/package.json
+++ b/back_end/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "nodemailer": "^6.9.14",
-    "punycode": "^2.3.1"
+    "punycode": "^2.3.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "rimraf": "^6.0.1"
