--- a/back_end/package.json
+++ b/back_end/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/storage": "^7.15.0",
     "@googlemaps/google-maps-services-js": "^3.3.39",
     "axios": "^1.3.1",
     "bcryptjs": "^2.4.3",
